fix(hero-animation): fix spacing issues and font size to match the previous version

--- a/express/blocks/hero-animation/hero-animation.css
+++ b/express/blocks/hero-animation/hero-animation.css
@@ -176,6 +176,14 @@ main .hero-animation .hero-animation-overlay > div {
   main .hero-animation.wide .hero-animation-overlay .icon {
     height: 30px;
   }
+  
+  main .hero-animation .hero-animation-overlay > div > :first-child {
+    margin-top: 0;
+  }
+  
+  main .hero-animation .hero-animation-overlay > div > :last-child {
+    margin-bottom: 0;
+  }
 }
 
 main .hero-animation.wide .hero-animation-overlay video {
